objects/Car__c.object
<CustomObject>
    <fields>
        <fullName>Car_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Car Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Car_Name__c</fullName>
        <description>Car Name</description>
        <label>Car Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Number__c</fullName>
        <label>Car Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Car_Service_Date__c</fullName>
        <label>Car Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Charges_Per_Day__c</fullName>
        <description>Car Charges</description>
        <label>Charges Per Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Seats__c</fullName>
        <label>Number of Seats</label>
        <picklist>
            <controllingField>Type_of_Car__c</controllingField>
            <picklistValues>
                <fullName>4 +1 Seater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 +1 Seater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 +1 Seater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 +1 Seater</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Permit_Expiry_Date__c</fullName>
        <label>Permit Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permit_Issue_Date__c</fullName>
        <label>Permit Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pollution_Expiry_Date__c</fullName>
        <label>Pollution Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pollution_Issue_Date__c</fullName>
        <label>Pollution Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_of_Car__c</fullName>
        <label>Type of Car</label>
        <picklist>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-AC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Car</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Car Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Simpsons_carPermitCheck</fullName>
        <active>true</active>
        <errorConditionFormula>Permit_Expiry_Date__c  &lt; Permit_Issue_Date__c</errorConditionFormula>
        <errorMessage>Permit Expiry Date should be greater than the Permit Issue Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Simpsons_carPollutionCheck</fullName>
        <active>true</active>
        <errorConditionFormula>Pollution_Expiry_Date__c  &lt; Pollution_Issue_Date__c</errorConditionFormula>
        <errorMessage>Permit Expiry Date should be greater than the Permit Issue Date</errorMessage>
    </validationRules>
</CustomObject>